--- a/GoogleSignIn/android/app/build.gradle
+++ b/GoogleSignIn/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-gesture-handler')
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation project(':react-native-google-signin')
     implementation fileTree(dir: "libs", include: ["*.jar"])
